# EarthSim

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  earth_sim  flake.nix  wgs_test
include/: Earth.cpp  Earth.hpp  Engine.cpp  Engine.hpp
include/Cameras/: Camera.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp
include/FlyingObjects/: FlyingObject.hpp  Rock.cpp  Rock.hpp
include/Objects/: Cube.hpp  Ellipsoid.hpp  Object.cpp  Object.hpp  Rock.hpp  Triangle.hpp
include/Utils/: Camera.hpp  Console.cpp  Console.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  GeoCentricCamera.cpp  GeoCentricCamera.hpp  Physics.hpp  Shader.cpp  Shader.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp  wgs84.hpp
include/common/: config.h  controls.cpp  controls.hpp  shader.cpp  text2D.cpp
include/glad/: glad.h
include/static/: wgs84.cpp  wgs84.hpp
shaders/: console.fs  console.vs  phisical.fs  phisical.vs  simple.vertex.shader
src/: glad.c  main.cpp  main.cpp.bac  wgs_test.cpp
